--- a/KD_scratch_notebook.ipynb
+++ b/KD_scratch_notebook.ipynb
@@ -81,14 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "6d014ac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'header' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m     header \u001b[38;5;241m=\u001b[39m Bio\u001b[38;5;241m.\u001b[39mPDB\u001b[38;5;241m.\u001b[39mparse_pdb_header(input_file)\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (header)\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mheader\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'header' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import Bio.PDB.parse_pdb_header\n",
     "def read_pdb_header (input_file): #creates a dictionary for items in the PDB header, named header\n",
-    "    input_file = \"/Users/kevin/Downloads/7rk2.pdb\"\n",
+    "    input_file = \"7rk2.pdb\"\n",
     "    #will need to change for loop to work\n",
     "    header = Bio.PDB.parse_pdb_header(input_file)\n",
     "    return (header)"
@@ -96,22 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 98,
    "id": "2de49512",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3167176129.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn [4], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    call read_pdb_header\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'idcode': '', 'structure_method': 'unknown', 'resolution': None, 'deposition_date': '1909-01-08'}\n"
      ]
     }
    ],
    "source": [
     "#extracts the parameters of interest from the header dictionary as a new dictionary named subset_header\n",
-    "call read_pdb_header\n",
     "keys_to_extract = [\"idcode\", \"structure_method\", \"resolution\", \"deposition_date\"]\n",
     "subset_header = {key: header[key] for key in keys_to_extract}\n",
     "print (subset_header)"
@@ -119,19 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "id": "d66ff424",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'subset_header' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#creates a dataframe from subset_header with each parameter in it's own column\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame ([\u001b[43msubset_header\u001b[49m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m (df)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'subset_header' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  idcode structure_method resolution deposition_date\n",
+      "0                 unknown       None      1909-01-08\n"
      ]
     }
    ],
